--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/sweater
-spring.datasource.username=root
-spring.datasource.password=abdelkader
-verifyServerCertificate=false
-useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/sweater?autoReconnect=true&useSSL=false
+spring.datasource.username=sweater-app-qwerty
+spring.datasource.password=qwerty
+
