--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/sweater?autoReconnect=true&useSSL=false
 spring.datasource.username=sweater-app-qwerty
 spring.datasource.password=qwerty
+
+spring.mustache.expose-request-attributes=true
+
 
