--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
+# For the first start use - spring.jpa.hibernate.ddl-auto=create
+# Rest time use - spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/sweater?autoReconnect=true&useSSL=false
 spring.datasource.username=sweater-app-qwerty
 spring.datasource.password=qwerty
 
-spring.mustache.expose-request-attributes=true
+spring.freemarker.expose-request-attributes=true
 
 
