Spring Boot: upload files to server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=qwerty
 
 spring.freemarker.expose-request-attributes=true
 
-
+upload.path=/home/vova/IdeaProjects/sweater/uploads
