Add Email verification

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,12 @@ spring.datasource.password=qwerty
 spring.freemarker.expose-request-attributes=true
 
 upload.path=/home/vova/IdeaProjects/sweater/uploads
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=barkalov.auto.email.sender@gmail.com
+spring.mail.password=Sweater123
+spring.mail.port=587
+spring.mail.protocol=smtps
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.debug=true
