--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 # For the first start use - spring.jpa.hibernate.ddl-auto=create
 # Rest time use - spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.datasource.url=jdbc:mysql://localhost:3306/sweater?autoReconnect=true&useSSL=false
 spring.datasource.username=sweater-app-qwerty
 spring.datasource.password=qwerty
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+
+#spring.flyway.baseline-on-migrate=true
 
 spring.freemarker.expose-request-attributes=true
 
@@ -12,7 +16,7 @@ upload.path=/home/vova/IdeaProjects/sweater/uploads
 spring.mail.host=smtp.gmail.com
 spring.mail.username=barkalov.auto.email.sender@gmail.com
 spring.mail.password=Sweater123
-spring.mail.port=587
+spring.mail.port=465
 spring.mail.protocol=smtps
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
